security-and-compliance section and video spacing fix.

--- a/ws-style.css
+++ b/ws-style.css
@@ -16,10 +16,26 @@
 */
 
 .page-id-29045 .et_pb_row_3.et_pb_row,
-.page-id-29045 .et_pb_row_6.et_pb_row {
+.page-id-29045 .et_pb_row_6.et_pb_row,
+.page-id-29057 .et_pb_row_3.et_pb_row,
+.page-id-29057 .et_pb_row_5.et_pb_row,
+.page-id-29057 .et_pb_row_9.et_pb_row,
+.page-id-29057 .et_pb_row_10.et_pb_row,
+{
     padding-bottom: 0px !important;
 }
 
 .page-id-29045 .et_pb_slide_with_image .et_pb_slide_description {
     width: 55%;
+}
+
+
+/* 
+* Security and Compliance Fixes
+*/
+
+@media screen and (min-width: 981px) {
+    .page-id-29057 .et_pb_video_0 {
+        padding: 25px 0px;
+    }
 }
